# train

./: .gitignore  alembic.ini  database.py  main.py  models.py  pyproject.toml  settings.py  user_router.py
.migration/: env.py
.migration/versions/: a353c468f344_add_user_model.py
